<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="T_PST" Id="{ead61f37-9743-4b3a-9be3-ef92b97bdaba}">
    <Declaration><![CDATA[TYPE T_PST :
STRUCT
	io:		T_PST_IO;
	ctrl:	T_PST_CTRL;
	id:		T_PST_ID;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>